# plover-dictgen

./: .gitattributes  Cargo.toml  README.md  check-weights.py  collect-wordcounts.py  count-similarities.py  dictionary.json  discord-dump.py  english-plover-brief.toml  english-plover.toml  limit-to-plover.py  reddit-dump.py  rustfmt.toml  spillover.json  translate-all.py  weightstats.ipynb
benches/: language.rs
languages/: english.toml
src/: arpabet.rs  dictionary.rs  explore.rs  helpers.rs  ipa.rs  language.rs  lib.rs  main.rs  matcher.rs  system.rs
src/data/: README.md
