[package]
name = "plover-dictgen"
version = "0.1.0"
edition = "2021"
description = "automatic plover dictionary generation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
lto = true
panic = "abort"
#codegen-units = 1

[dependencies]
csv = "1.3"
educe = "0.4"
either = { version = "1.9", features = [ "serde" ] }
jemallocator = "0.5"
lazy_static = "1.4"
nom = "7"
ordered-float = { version = "4", features = [ "serde" ] }
rustc-hash = "1.1"
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.9"
toml = "0.8"
typed-arena = "2"
num-traits = "0.2"
itertools = "0.12"
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "language"
harness = false

[lints]
# These need to be copied to each root file as they don't appear to work together with the groups of
# lints like `clippy.pedantic` :(
clippy.if_not_else = "allow"
clippy.needless_borrowed_reference = "allow"
clippy.redundant_else = "allow"
clippy.match_on_vec_items = "allow"
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"

rust.explicit_outlives_requirements = "warn"
rust.macro_use_extern_crate = "warn"
rust.meta_variable_misuse = "warn"
rust.missing_abi = "warn"
# rust.missing_docs = "warn"  #  TODO
rust.non_ascii_idents = "warn"
rust.pointer_structural_match = "warn"
rust.single_use_lifetimes = "warn"
rust.trivial_numeric_casts = "warn"
# rust.unreachable_pub = "warn" #  allowed for binaries
rust.unsafe_op_in_unsafe_fn = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_extern_crates = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
rust.unused_tuple_struct_fields = "warn"
rust.variant_size_differences = "warn"
clippy.all = "warn"
clippy.pedantic = "warn"
clippy.absolute_paths = "warn"
# clippy.allow_attributes_without_reason = "warn"  #  TODO
clippy.as_ptr_cast_mut = "warn"
clippy.branches_sharing_code = "warn"
# clippy.cargo_common_metadata = "warn" #  allowed for binaries
clippy.clear_with_drain = "warn"
clippy.clone_on_ref_ptr = "warn"
clippy.cognitive_complexity = "warn"
clippy.collection_is_never_read = "warn"
# clippy.dbg_macro = "warn"  #  TODO
clippy.debug_assert_with_mut_call = "warn"
clippy.decimal_literal_representation = "warn"
clippy.default_numeric_fallback = "warn"
clippy.default_union_representation = "warn"
clippy.deref_by_slicing = "warn"
clippy.derive_partial_eq_without_eq = "warn"
clippy.empty_drop = "warn"
clippy.empty_line_after_doc_comments = "warn"
clippy.empty_line_after_outer_attr = "warn"
clippy.empty_structs_with_brackets = "warn"
clippy.equatable_if_let = "warn"
clippy.fallible_impl_from = "warn"
clippy.float_cmp_const = "warn"
clippy.format_push_string = "warn"
clippy.future_not_send = "warn"
clippy.get_unwrap = "warn"
clippy.if_then_some_else_none = "warn"
clippy.implied_bounds_in_impls = "warn"
clippy.imprecise_flops = "warn"
clippy.inline_asm_x86_att_syntax = "warn"
clippy.iter_on_empty_collections = "warn"
clippy.iter_on_single_items = "warn"
clippy.iter_with_drain = "warn"
clippy.large_stack_frames = "warn"
clippy.lossy_float_literal = "warn"
clippy.manual_clamp = "warn"
clippy.mixed_read_write_in_expression = "warn"
clippy.mod_module_files = "warn"
clippy.multiple_crate_versions = "warn"
clippy.multiple_inherent_impl = "warn"
clippy.mutex_atomic = "warn"
clippy.mutex_integer = "warn"
clippy.needless_collect = "warn"
clippy.needless_pass_by_ref_mut = "warn"
clippy.negative_feature_names = "warn"
clippy.nonstandard_macro_braces = "warn"
clippy.option_if_let_else = "warn"
clippy.or_fun_call = "warn"
clippy.path_buf_push_overwrite = "warn"
clippy.pattern_type_mismatch = "warn"
clippy.pub_without_shorthand = "warn"
clippy.rc_buffer = "warn"
clippy.rc_mutex = "warn"
clippy.read_zero_byte_vec = "warn"
clippy.readonly_write_lock = "warn"
clippy.redundant_clone = "warn"
clippy.redundant_feature_names = "warn"
clippy.redundant_pub_crate = "warn" #  allowed in libraries (⇒ unreachable_pub)
clippy.redundant_type_annotations = "warn"
clippy.rest_pat_in_fully_bound_structs = "warn"
clippy.same_name_method = "warn"
clippy.semicolon_inside_block = "warn"
clippy.separated_literal_suffix = "warn"
clippy.significant_drop_in_scrutinee = "warn"
clippy.significant_drop_tightening = "warn"
clippy.str_to_string = "warn"
clippy.string_add = "warn"
clippy.string_lit_as_bytes = "warn"
clippy.string_to_string = "warn"
clippy.suboptimal_flops = "warn"
clippy.suspicious_operation_groupings = "warn"
clippy.suspicious_xor_used_as_pow = "warn"
clippy.tests_outside_test_module = "warn"
clippy.todo = "warn"
clippy.trailing_empty_array = "warn"
clippy.trait_duplication_in_bounds = "warn"
clippy.transmute_undefined_repr = "warn"
clippy.trivial_regex = "warn"
clippy.try_err = "warn"
clippy.tuple_array_conversions = "warn"
clippy.undocumented_unsafe_blocks = "warn"
clippy.unimplemented = "warn"
clippy.unnecessary_safety_comment = "warn"
clippy.unnecessary_safety_doc = "warn"
clippy.unnecessary_self_imports = "warn"
clippy.unnecessary_struct_initialization = "warn"
clippy.unneeded_field_pattern = "warn"
clippy.unused_peekable = "warn"
clippy.unused_rounding = "warn"
clippy.use_debug = "warn"
clippy.useless_let_if_seq = "warn"
clippy.verbose_file_reads = "warn"
clippy.wildcard_dependencies = "warn"
